Fixed footer alignment on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -265,6 +265,11 @@ footer > p {
     color: white;
 }
 
+footer > p {
+    width: 60%;
+    text-align: center;
+}
+
 @media (min-width: 500px) {
     header > div {
         max-width: 1000px;
@@ -323,8 +328,8 @@ footer > p {
         margin: auto;
     }
 
-    footer > div {
-        max-width: 1000px;
+    footer > p {
+        max-width: fit-content;
         margin: auto;
     }
 }
